[package]
name = "dusk-ui"
version = "0.1.0"
edition = "2021"
authors = ["Vinicius Rangel <me@viniciusrangel.dev>"]
license = "ISC"

[dependencies]
dashmap = "5.5"
thiserror = "1.0"
tokio = { version = "1.32", default-features = false, features = ["sync", "macros"] }
twilight-model = "0.15"
twilight-http = "0.15"
twilight-validate = "0.15"
