[package]
edition = "2021"
name = "dusk-ui"
description = "Discord UI framework for interact message using twilight API."
authors = ["Vinicius Rangel <me@viniciusrangel.dev>"]
version = "0.2.1"
license = "ISC"
repository = "https://github.com/viniciuslrangel/dusk-ui"
keywords = ["discord", "discord-api", "twilight", "dusk"]
publish = true

[dependencies]
dashmap = "5.5"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.32", default-features = false, features = ["sync", "macros"] }
twilight-model = "0.15"
twilight-http = "0.15"
twilight-validate = "0.15"
